2007-12-19 Andreas Schmitz <schmitz@lat-lon.de>
      translations:
      Added the enable check factory, fixing an item on Jukka's list.

2007-12-18 Paul Austin <paul.austin@revolsys.com
  *  Migrated the Layer and WMSLayer to use the new RendererFactory implementation

2007-12-18 Paul Austin <paul.austin@revolsys.com
  * Added a new RendererFactory implementation which accepts the LayerViewPanel
    as an argument.
    
2007-12-18 Andreas Schmitz <schmitz@lat-lon.de>
      src/language/jump_de.properties:
      Translated remaining values to german.

2007-12-14 Andreas Schmitz <schmitz@lat-lon.de>
      src/com/vividsolutions/jump/workbench/ui/wizard/WizardDialog.java:
      Fixed behaviour when pressing cancel.
      src/com/vividsolutions/jump/workbench/ui/task/TaskMonitorManager.java:
      Added loop to avoid dangling monitor dialogs.

2007-12-13 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/OpenJumpConfiguration.java,
      src/org/openjump/core/ui/plugin/edit/CopyBBoxPlugin.java:
      Added function to copy current bounding box to clipboard.

2007-11-16 sstein <sstein@geo.unizh.ch>
      src/org.openjump.core.spatialAttributeOps/AttributeOp.java:
      added lib: jmatharray-20070905.jar
      removed lib: jmath5m.jar
      Updated to newer version of jmatharray library which works on double[][].
      
2007-11-14 Andreas Schmitz <schmitz@lat-lon.de>
      src/com/vividsolutions/wms/Parser.java:
      External DTDs are not loaded automatically anymore for WMS, this
      enables offline working with local WMSs.
      
2007-11-08 beckerl <becker.larry@gmail.com>
           * Added a Paste Items At Point menu item on the layer view context
             menu that pastes the clipboard at the right-clicked point.  Note 
             that there must be an editable layer highlighted.  No I18n entries yet.
             org.openjump.core.ui.plugin.mousemenu.PasteItemsAtPlugIn.java
             com.vividsolutions.jump.workbench.JUMPConfiguration.java

 