@@ -102,6 +102,7 @@ com.vividsolutions.wms.WMService.WMS-IO-Error = Es konnte keine Verbindung zum W
 	{0}\: {1}
 com.vividsolutions.wms.WMService.WMS-Not-Found = Der WMS konnte nicht gefunden werden.\n\
 	Anfrage war\: {0}
+com.vididsolutions.wms.WMService.Other-GetMap-URL-Found = Der WMS gibt nach aussen {0} als GetMap URL an. Soll diese benutzt werden?
 coordsys.ChangeCoordinateSystemPlugIn.coordinate-system-for-task = Koordinatensystem f\u00FCr Projekt\:
 coordsys.CoordinateSystem.unspecified = Nicht gew\u00E4hlt
 datasource.DataSourceQueryChooserDialog.card = Karte
