@@ -90,6 +90,7 @@ com.vividsolutions.wms.WMService.WMS-IO-Error = Could not connect to the WMS.\n\
 	{0}\: {1}
 com.vividsolutions.wms.WMService.WMS-Not-Found = The WMS was not found.\n\
 	Request was\: {0}
+com.vididsolutions.wms.WMService.Other-GetMap-URL-Found = The WMS advertises the URL {0} as GetMap-URL. Do you want to use it?
 coordsys.ChangeCoordinateSystemPlugIn.coordinate-system-for-task = ??????\:
 coordsys.CoordinateSystem.unspecified = ???
 datasource.DataSourceQueryChooserDialog.card = ??
